--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         IMAGE_TAG: ${{ env.RELEASE_VERSION }}
       run: |
         # Build a docker container and push it to ECR 
+        echo ${{ env.ECR_REGISTRY }} ${{ env.ECR_REPOSITORY }} ${{ env.IMAGE_TAG }}
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
