--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - main
 
 name: AWS ECR push
 jobs:
@@ -40,7 +40,9 @@ jobs:
         IMAGE_TAG: ${{ env.RELEASE_VERSION }}
       run: |
         # Build a docker container and push it to ECR 
-        echo ${{ env.ECR_REGISTRY }} ${{ env.ECR_REPOSITORY }} ${{ env.IMAGE_TAG }}
+        echo ${{ env.ECR_REGISTRY }} 
+        echo ${{ env.ECR_REPOSITORY }}
+        echo ${{ env.IMAGE_TAG }}
         #docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
         #docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
