--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-        IMAGE_TAG: ${{ env.RELEASE_VERSION }}
+        IMAGE_TAG: $RELEASE_VERSION
       run: |
         # Build a docker container and push it to ECR 
         echo ${{ env.ECR_REGISTRY }} 
