--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,9 @@ on:
 jobs:
   build-push-to-ecr:
     runs-on: ubuntu-latest
-    env:
-      PYTHON_V: "3.9"
+    strategy:
+      matrix:
+        python-version: ["3.9"]
 
     steps:
     - name: Checkout
@@ -22,21 +23,36 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ env.PYTHON_V }}
-        
+  
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
+ 
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+ 
     - name: Run tests and generage coverage report
       run: |
           pip install pytest pytest-cov
-          # create and set the r/w perms for DD agent
-          sudo touch /var/log/pyportal_logs.json
-          sudo chmod 777 /var/log/pyportal_logs.json
-          export PYTHONPATH=${PYTHONPATH}:.
-          # temporary ignore to finish the pipeline before fixing the tests
           pytest --cov=./ --cov-report=xml -vv
+  
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        directory: ./
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
+        files: coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        verbose: true
         
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -48,6 +64,8 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+
+
 
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image
