--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,21 +37,21 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
  
-    - name: Run tests and generage coverage report
-      run: |
-          pip install pytest pytest-cov
-          pytest --cov=./ --cov-report=xml -vv
+   # - name: Run tests and generage coverage report
+   #   run: |
+   #       pip install pytest pytest-cov
+   #       pytest --cov=./ --cov-report=xml -vv
   
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        directory: ./
-        env_vars: OS,PYTHON
-        fail_ci_if_error: true
-        files: coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        verbose: true
+   # - name: Upload coverage to Codecov
+   #   uses: codecov/codecov-action@v2
+   #   with:
+   #     directory: ./
+   #     env_vars: OS,PYTHON
+   #     fail_ci_if_error: true
+   #     files: coverage.xml
+   #     flags: unittests
+   #     name: codecov-umbrella
+   #     verbose: true
         
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
