--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,3 +90,6 @@ jobs:
     - name: Create Octopus Release
       run: octo create-release --project underwater-octo-github --version 0.0.i --server=${{ secrets.OCTOPUS_SERVER }} --apiKey=${{ secrets.OCTOPUS_APIKEY }}
 
+    - name: deploy Octopus release
+      run: octo deploy-release --project underwater-octo-github --version=latest --deployto Development --server=${{ secrets.OCTOPUS_SERVER }} --apiKey=${{ secrets.OCTOPUS_APIKEY }}    
+
