--- a/sampleDeployment.yml
+++ b/sampleDeployment.yml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: hello-service 
-        image: $ECR_REGISTRY/$ECR_REPOSITORY:${{ env.RELEASE_VERSION }}
+        image: $IMAGE
         imagePullPolicy: Always
         ports:
         - containerPort: 80
