--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set env
+      if: ${{ contains(github.ref, 'prod') }}
       run: |
           {
             echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}"
