--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       if: contains(github.ref, 'prod')
       run: |
           {
-            echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}"
-            echo "RELEASE_FNAME=underwater.${GITHUB_REF#refs/*/v}.zip"
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/*/prod-v}"
+            echo "RELEASE_FNAME=underwater.${GITHUB_REF#refs/*/prod-v}.zip"
             echo "OCTOPUS_PROJ=underwater-octo-github"
             echo "OCTOPUS_TARGET=Development"
             echo "OCTOPUS_PACKAGE_SUFFIX="
