--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-  - name: 379452281316.dkr.ecr.eu-west-1.amazonaws.com/revenyou-defi-automation
+  - name: 624376450453.dkr.ecr.us-east-1.amazonaws.com/underwaterapp
     newTag: 221123-1
 
 resources:
