--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,7 +138,7 @@ jobs:
 
     - name: Update Kubernetes resources
       run: |
-       cd k8s/overlay/prod
+       cd k8s/base
        kustomize edit set image 379452281316.dkr.ecr.eu-west-1.amazonaws.com/revenyou-defi-automation=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_VERSION }}
        cat kustomization.yaml
         
