--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
           {
             echo "RELEASE_VERSION=${GITHUB_REF#refs/*/prod-v}"
+            echo "GIT_TAG=${GITHUB_REF#refs/*/}"
             echo "RELEASE_FNAME=underwater.${GITHUB_REF#refs/*/prod-v}.zip"
             echo "OCTOPUS_PROJ=underwater-octo-github"
             echo "OCTOPUS_TARGET=Development"
@@ -149,8 +150,8 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git tag -d $GITHUB_REF_NAME
-        git tag $GITHUB_REF_NAME
+        git tag -d $GIT_TAG
+        git tag $GIT_TAG
         git commit -am "Bump docker tag"
 
 
