--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,8 +158,6 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        force: true
-        tags: true
+        branch: ${{ github.head_ref }}
         
         
