--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -160,8 +160,8 @@ jobs:
     
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
-
-
+      with:
+        base: ${{ github.head_ref }}
 
 
   #  - name: Commit files
