--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         fetch-depth: 0
 
     - name: Set env
+      id: setenv
       if: contains(github.ref, 'prod')
       run: |
           {
@@ -31,8 +32,7 @@ jobs:
             echo "OCTOPUS_TARGET=Development"
             echo "OCTOPUS_PACKAGE_SUFFIX="
           } >> $GITHUB_ENV
-      
-      
+          
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -84,6 +84,7 @@ jobs:
         echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}"
         echo "ECR_REPOSITORY=${{ secrets.REPO_NAME }}"
          } >> $GITHUB_ENV
+     
 
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image 
@@ -94,11 +95,11 @@ jobs:
         docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_VERSION }}
         
         
-    - name: Replace image in config
-      uses: datamonsters/replace-action@v2
-      with:
-        files: sampleDeployment.yml
-        replacements: '$IMAGE=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_VERSION }}'
+ #   - name: Replace image in config
+ #     uses: datamonsters/replace-action@v2
+ #     with:
+ #       files: sampleDeployment.yml
+ #       replacements: '$IMAGE=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_VERSION }}'
         
     - name: Prepare Upload Package
       run: |
@@ -143,6 +144,7 @@ jobs:
        cd k8s/base
        kustomize edit set image 624376450453.dkr.ecr.us-east-1.amazonaws.com/underwaterapp=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_VERSION }}
        cat kustomization.yaml
+       
   update-repository:
     needs: build-push-to-ecr
     runs-on: ubuntu-latest
@@ -158,7 +160,7 @@ jobs:
       - name: Update Kubernetes resources
         run: |
           cd k8s/base
-          kustomize edit set image 624376450453.dkr.ecr.us-east-1.amazonaws.com/underwaterapp=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_VERSION }}
+          kustomize edit set image 624376450453.dkr.ecr.us-east-1.amazonaws.com/underwaterapp=${{ needs.build-push-to-ecr.steps.login-ecr.outputs.registry }}/${{ secrets.REPO_NAME }}:${{ env.RELEASE_VERSION }}
           cat kustomization.yaml
       - name: Commit files
         run: |
