--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,12 @@ on:
   push:
     tags:
       - "*-v[1-9]+.[0-9]+.[0-9]+"
-  workflow_dispatch:  
+  workflow_dispatch:
+  
+# This is what will cancel the workflow
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
   
 jobs:
   build-push-to-ecr:
