--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     types: [opened, reopened, ready_for_review, synchronize]
     branches:
-      - develop
+      - main
   push:
     branches: [develop, master]
   
