--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -8,6 +8,11 @@ on:
       - main
   push:
     branches: [develop, master]
+    
+# This is what will cancel the workflow
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
   
 jobs:
   run-unit-tests:
